[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Fireball2.png" type="Texture" id=1]
[ext_resource path="res://assets/Fireball1.png" type="Texture" id=2]
[ext_resource path="res://scripts/fireball.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[node name="fireball" type="Area2D"]
script = ExtResource( 3 )

[node name="fire" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "fly"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 1 )
scale = Vector2( 1, 0.45 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 1.43051e-06 )
scale = Vector2( 3.2, 2 )
[connection signal="area_entered" from="." to="." method="_on_fireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
